--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -5,6 +5,7 @@ body {
   background-color: $color--light;
   color: $color--dark;
   margin: 0 1em;
+  font-size: 120%;
 
   @media (min-width: 768px) {
     margin: 0 20px;
@@ -34,6 +35,15 @@ a {
   color: #2c3e50;
   margin-top: 1em;
   font-size: 126%;
+  margin-bottom: 200px;
+}
+
+// ::after element to show end of #app content
+#app::after {
+  margin-top: 50px;
+  font-size: 0.51em;
+  content: '~end of page~';
+  display: block;
 }
 
 /* Add styling for your navigation menu here */
@@ -43,7 +53,7 @@ nav ul {
   margin: 1em auto 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
 
@@ -56,7 +66,7 @@ nav ul {
     border: 4px dashed $color--primary;
     transition: all 0.4s ease;
     display: flex;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
   }
 
   a:hover {
@@ -82,8 +92,11 @@ nav ul {
 
 /* Additional styles can go here */
 .volume-control {
+  border: 2px solid $color--lightpink;
   text-align: center; /* Center the slider if needed */
   padding: 0 1em;
+  width: fit-content;
+  margin: 1em auto 0;
 }
 
 /* You can style the slider here */
