Move notfoundpage styles into scss

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 
+// Persistent player at the bottom of the screen
 .persistent-player {
   position: fixed;
   bottom: 0;
@@ -70,3 +71,23 @@
   }
 }
 
+// 404 page styles
+.not-found {
+  text-align: center;
+}
+
+.not-found-image {
+  display: block;
+  margin: 0 auto 1em;
+  width: auto;
+  max-height: 40vh;
+}
+
+.not-found h1 {
+  font-size: 4em;
+  margin: 0;
+}
+
+.not-found p {
+  font-size: 2em;
+}
