Make the primary blue darker

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 $color--white: #eeede5;
 $color--black: #181818;
-$color--primary: #1e8dfd;
+$color--primary: #0076e8;
 $color--secondary: #298505;
 $color--tertiary: #a43128;
 $color--success: #dcc22e;
