Fix base styles

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,9 +1,9 @@
 $color--white: #eeede5;
 $color--black: #181818;
-$color--primary: #0076e8;
-$color--secondary: #298505;
+$color--primary: #0168c9;
+$color--secondary: #2a8d03;
 $color--tertiary: #a43128;
-$color--success: #dcc22e;
-$color--light: #f8f9fa;
-$color--dark: #343a40;
-$color--lightpink: #ffd6ec;
+$color--success: #ffe65d;
+$color--light: rgb(253, 237, 253);
+$color--dark: #25292c;
+$color--lightpink: #ffc4e0;
