--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -6,14 +6,15 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: $color--lightpink;
+  background-color: $color--success;
   color: black;
-  padding: 0.5em;
+  padding: 0.75em;
   display: flex;
   height: fit-content;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+  filter: contrast(1.17);
 
   .track-info {
     display: flex;
