--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -4,9 +4,9 @@
   .track-list {
     display: grid;
     grid-template-columns: 1fr; // Start with a single column
-    gap: 2em; // Add some space between the grid items
+    gap: 1em; // Add some space between the grid items
     list-style: none;
-    margin: 20px auto;
+    margin: 1em auto;
     height: auto; // Adjust if you want a scrolling list or full-height
     overflow-y: auto; // Only show scrollbar if the content overflows
     padding: 0.5em;
@@ -15,6 +15,7 @@
       // Define two columns above 768px
       grid-template-columns: repeat(2, 1fr);
       max-width: 80vw;
+      gap: 1.5em;
     }
 
     @media (min-width: 1100px) {
@@ -30,7 +31,7 @@
     cursor: pointer;
     transition: all 0.5s ease;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    padding: 1em;
+    padding: 0.81em;
     border-radius: 0.5em;
     text-align: left;
     display: flex;
@@ -67,13 +68,12 @@
     p {
       color: $color--secondary; // Enforce a consistent color for the artist name
       font-size: 1.1rem; // Keep the font size consistent
+      margin-top: 0.5em;
     }
   }
 
   .currently-playing {
-    background-color: $color--lightpink;
-    color: $color--light;
-    margin-right: 1.5em;
+    outline: 3px solid $color--success;
     filter: contrast(1.2);
   }
 }
