--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -101,3 +101,33 @@
 .not-found p {
   font-size: 2em;
 }
+
+// Music bars for the visualizer
+.music-bars {
+  display: flex;
+  justify-content: space-around;
+  margin: 1em auto;
+  align-items: center;
+  gap: 1em;
+  height: 3em; // Adjust based on how tall you want the bars to be
+  width: 7em; // Adjust based on the desired width of the entire set of bars
+
+  .bar {
+    width: 1em; // Width of each individual bar
+    height: 10%; // Starting height of each bar
+    background-color: $color--lightpink; // Color of the bars
+    animation: animateBar 2s infinite ease-in-out alternate;
+
+    &:nth-child(1) { animation-delay: -0.6s; }
+    &:nth-child(2) { animation-delay: -0.4s; }
+    &:nth-child(3) { animation-delay: -0.2s; }
+    &:nth-child(4) { animation-delay: 0; }
+    &:nth-child(5) { animation-delay: -0.2s; }
+  }
+}
+
+@keyframes animateBar {
+  0% { height: 20%; }
+  50% { height: 100%; }
+  100% { height: 20%; }
+}
