--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,6 +4,6 @@ $color--primary: #0168c9;
 $color--secondary: #2a8d03;
 $color--tertiary: #a43128;
 $color--success: #ffe65d;
-$color--light: rgb(253, 237, 253);
+$color--light: rgb(253, 250, 237);
 $color--dark: #25292c;
-$color--lightpink: #ffc4e0;
+$color--lightpink: #fddced;
