--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,9 +1,10 @@
 $color--white: #eeede5;
 $color--black: #181818;
 $color--primary: #0168c9;
-$color--secondary: #2a8d03;
+$color--secondary: #257c03;
 $color--tertiary: #a43128;
 $color--success: #ffe65d;
 $color--light: rgb(253, 250, 237);
 $color--dark: #25292c;
 $color--lightpink: #fddced;
+$color--pistachio: #dfffdb;
