--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -4,25 +4,29 @@
   .track-list {
     display: grid;
     grid-template-columns: 1fr; // Start with a single column
-    gap: 1em; // Add some space between the grid items
+    gap: 1em;
     list-style: none;
     margin: 1em auto;
     height: auto; // Adjust if you want a scrolling list or full-height
     overflow-y: auto; // Only show scrollbar if the content overflows
-    padding: 0.5em;
+    padding: 1em 0.5em;
+    background-color: $color--pistachio;
+    border-radius: 0.5em;
 
     @media (min-width: 768px) {
       // Define two columns above 768px
       grid-template-columns: repeat(2, 1fr);
       max-width: 80vw;
       gap: 1.5em;
+      padding: 1em 2em;
     }
 
-    @media (min-width: 1100px) {
-      // Define three columns above 1100px
-      grid-template-columns: repeat(3, 1fr);
+    @media (min-width: 1024px) {
+      // Define three columns above 1024px
+      max-width: 70vw;
+      gap: 1.5em 2em;
+      padding: 1em 3em;
     }
-
     // Continue with additional breakpoints as needed
   }
 
@@ -63,13 +67,23 @@
     h3 {
       color: $color--dark;
       font-weight: bold;
+      font-size: 1.65rem; // Keep the font size consistent
+      line-height: 1.05;
     }
 
     p {
       color: $color--secondary; // Enforce a consistent color for the artist name
       font-size: 1.1rem; // Keep the font size consistent
-      margin-top: 0.35em;
+      margin-top: 0.25em;
     }
+  }
+
+  .track-duration {
+    color: $color--dark;
+    font-size: 1.1rem;
+    margin-left: auto;
+    align-self: flex-start;
+    padding-left: 1em;
   }
 
   .currently-playing {
