--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -41,6 +41,16 @@ a {
   margin-top: 1em;
   font-size: 126%;
   margin-bottom: 27vh;
+
+  h1 {
+    font-size: 2.5em;
+    margin-bottom: 0.15em;
+  }
+
+  h4 {
+    margin-top: 0.15em;
+  }
+
 }
 
 // ::after element to show end of #app content
@@ -56,6 +66,11 @@ nav ul {
   list-style-type: none;
   padding: 0;
   margin: 1em auto 0;
+    display: flex;
+    flex-direction: row;
+  column-gap: 1em;
+  row-gap: 0.25em;
+  flex-wrap: wrap;
 
   a {
     text-decoration: none;
@@ -119,10 +134,18 @@ nav ul {
   }
 
   li {
-    margin-bottom: 0.5em;
+    margin-bottom: 0.85em;
     line-height: 1;
     border-left: 7px solid $color--primary;
     padding: 0.25em 0.5em;
     text-align: left;
+  }
+
+  blockquote {
+    margin: 0;
+    padding-top: 0.42em;
+    font-size: 0.75em;
+    font-style: italic;
+    color: $color--secondary;
   }
 }
