--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -39,12 +39,16 @@ a {
   text-align: center;
   color: $color--secondary;
   margin-top: 1em;
-  font-size: 126%;
+  font-size: 117%;
   margin-bottom: 27vh;
 
   h1 {
-    font-size: 2.5em;
+    font-size: 2em;
     margin-bottom: 0.15em;
+
+    @media (min-width: 768px) {
+      font-size: 2.5em;
+    }
   }
 
   h4 {
@@ -62,41 +66,46 @@ a {
 }
 
 /* Add styling for your navigation menu here */
+nav {
+  display: flex;
+}
+
 nav ul {
   list-style-type: none;
   padding: 0;
-  margin: 1em auto 0;
-    display: flex;
-    flex-direction: row;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
   column-gap: 1em;
   row-gap: 0.25em;
   flex-wrap: wrap;
+  justify-self: center;
 
   a {
     text-decoration: none;
     font-variant: all-petite-caps;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 1.1em;
     transition: all 0.4s ease;
     display: flex;
     flex-direction: column;
     width: max-content;
+    border-bottom: 2px solid transparent;
   }
 
   a:hover {
-    background-color: $color--primary;
-    color: $color--light;
+    color: $color--tertiary;
+    filter: contrast(1.2);
+    border-bottom: 2px solid $color--primary;
   }
 
   a.router-link-active {
-    background-color: $color--secondary;
-    color: $color--light;
+    border-bottom: 2px solid $color--tertiary;
+    color: $color--secondary;
   }
 
   a.router-link-active:hover {
-    background-color: $color--tertiary;
-    color: $color--success;
-    filter: contrast(1.2);
+    color: $color--tertiary;
   }
 }
 
@@ -144,8 +153,8 @@ nav ul {
   blockquote {
     margin: 0;
     padding-top: 0.42em;
-    font-size: 0.75em;
+    font-size: 0.6em;
     font-style: italic;
-    color: $color--secondary;
+    color: $color--tertiary;
   }
 }
