Make lighter var

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,7 +3,7 @@ $color--black: #181818;
 $color--primary: #0168c9;
 $color--secondary: #257c03;
 $color--tertiary: #a43128;
-$color--success: #ffe65d;
+$color--success: #fce671;
 $color--light: rgb(253, 250, 237);
 $color--dark: #25292c;
 $color--lightpink: #fddced;
