--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -141,7 +141,7 @@
     &:nth-child(1) { animation-delay: -0.6s; }
     &:nth-child(2) { animation-delay: -0.4s; }
     &:nth-child(3) { animation-delay: -0.2s; }
-    &:nth-child(4) { animation-delay: 0; }
+    &:nth-child(4) { animation-delay: initial; }
     &:nth-child(5) { animation-delay: -0.2s; }
   }
 }
