--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -49,6 +49,7 @@ a {
   h1 {
     font-size: 2em;
     margin-bottom: 0.15em;
+    margin-top: 0.25em;
 
     @media (min-width: 768px) {
       font-size: 2.5em;
