Fix shades of colors

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,10 @@
 $color--white: #eeede5;
 $color--black: #181818;
 $color--primary: #0168c9;
-$color--secondary: #257c03;
+$color--secondary: #1b5e01;
 $color--tertiary: #a43128;
-$color--success: #fce671;
+$color--success: #ffed92;
 $color--light: rgb(253, 250, 237);
 $color--dark: #25292c;
 $color--lightpink: #fddced;
-$color--pistachio: #dfffdb;
+$color--pistachio: #e9fde6;
