--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -10,6 +10,10 @@ body {
   @media (min-width: 768px) {
     margin: 0 2em;
   }
+
+  @media (max-width: 360px) {
+    font-size: 90%;
+  }
 }
 
 h1, h2, h3 {
