--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -15,6 +15,7 @@ nav ul {
   row-gap: 0.25em;
   flex-wrap: wrap;
   justify-self: center;
+  justify-content: center;
 
   a {
     text-decoration: none;
@@ -44,7 +45,6 @@ nav ul {
   }
 }
 
-
 .colophon {
   ul {
     list-style-type: none;
@@ -55,11 +55,6 @@ nav ul {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
-    width: 100%;
-
-    @media screen and (min-width: 768px) {
-      margin-left: 25vw;
-    }
   }
 
   li {
@@ -78,6 +73,18 @@ nav ul {
     font-size: 0.6em;
     font-style: italic;
     color: $color--tertiary;
+    word-break: keep-all;
   }
 }
 
+.about {
+  display: flex;
+  flex-direction: column;
+
+  p {
+    text-align: left;
+    padding: 0 0.25em;
+    margin-top: 0;
+    margin-bottom: 1.25em;
+  }
+}
