--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -3,6 +3,9 @@
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: $color--light;
+  background-image: url('@/assets/flowers.png');
+  background-repeat: repeat;
+  background-attachment: fixed;
   color: $color--dark;
   margin: 0 0.5em;
   font-size: 120%;
