--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,7 +4,7 @@ $color--primary: #0168c9;
 $color--secondary: #1b5e01;
 $color--tertiary: #a43128;
 $color--success: #ffed92;
-$color--light: rgb(253, 250, 237);
+$color--light: #FDFAEDFF;
 $color--dark: #25292c;
 $color--lightpink: #fddced;
 $color--pistachio: #e9fde6;
