Pause background image

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -3,7 +3,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: $color--light;
-  background-image: url('@/assets/flowers.png');
+  //background-image: url('@/assets/flowers.png');
   background-repeat: repeat;
   background-attachment: fixed;
   color: $color--dark;
